# cpp06

./: CMakeLists.txt
ex00/: Makefile  main.cpp  scalarConverter.cpp  scalarConverter.h
ex01/: Data.cpp  Data.h  Makefile  Serializer.cpp  Serializer.h  main.cpp
ex02/: Base.cpp  Base.h  Makefile  main.cpp
